--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate:prod": "set NODE_ENV=production&& npx sequelize-cli db:migrate",
+    "migrate:undo:prod": "set NODE_ENV=production&& npx sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
