--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "username": "juan_zuluaga",
     "password": "RjG0KVigHyvIW7XxKQzoOfsPDAhd7Qt3",
     "database": "mibienestar711_1xco",
-    "host": "dpg-d2n1e9adbo4c73924g3g-a.oregon-postgres.render.com/mibienestar711_1xco",
+    "host": "dpg-d2n1e9adbo4c73924g3g-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": {
